raw quiz layout without styling done

--- a/src/quiz/quiz.scss
+++ b/src/quiz/quiz.scss
@@ -1,11 +1,12 @@
 .quiz-container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    
     padding: 10px;
     
 }
 
-.sliding-dial-container{
-    width: 80%;
+.quiz-question-container{
+    width: 80%;;
 }
