added points box and label

--- a/src/quiz/quiz.scss
+++ b/src/quiz/quiz.scss
@@ -18,7 +18,7 @@ li.invis-label{ //we don't use the default li labels so set them to invis.
     margin-right: 20px;
     width:50px;
     height: 50px;
-    background: lightblue;
+    background: #509EAA;
     
     float: left;
 }
