--- a/src/points-allocation/prompt-box/prompt-box.scss
+++ b/src/points-allocation/prompt-box/prompt-box.scss
@@ -82,3 +82,11 @@
     border-radius: 5px;
     margin:8px;
   }
+  button.button:hover {
+    min-height: 30px;
+    background-color: #9eced6;
+    border: none;
+    border-radius: 5px;
+    margin:8px;
+    
+  }
