--- a/src/quiz/quiz.scss
+++ b/src/quiz/quiz.scss
@@ -6,6 +6,9 @@
     padding: 10px;
     
 }
+.quiz-container h1{
+    // align-self: flex-start;
+}
 li.invis-label{ //we don't use the default li labels so set them to invis.
     list-style-type: none;
 }
