--- a/src/points-allocation/point-allocation.scss
+++ b/src/points-allocation/point-allocation.scss
@@ -2,19 +2,46 @@
     display:flex;
     flex-direction: column;
 }
+.tick-bar-and-mod-wrapper{
+    display: flex;
+}
+td.tick-bar-block{
+    width: 100%;
+}
+.tick-bar-modifier{
+    float: right;
+    
+    display: flex;
+    flex-direction: row;
+    border: 2px solid white;
+    justify-content: space-between;
+    border-radius: 5px;
+}
+button.tick-bar-modifier{
+    background:none;
+    border: none;
+    width: 100%;
+    color:white;
+}
+button.tick-bar-modifier:active{
+    
+    border: none;
+}
 .points-allocation-page-container h1{
     margin-left: 10px;
     align-self: flex-start;
 }
+.tick-bar-label{
+    text-align: left;
+    float: left;
+    margin-right: 10px;
+    white-space: nowrap;
+}
 
 .tick-bars-container{
-    display:block;
+    display:inline-block;
     width:50%;
     margin:10px;
-    float:left;
-}
-.tick-bar-padding{
-    padding:10px;
 }
 
 .points-label-container{ 
