added spacing btwn tick bars

--- a/src/points-allocation/point-allocation.scss
+++ b/src/points-allocation/point-allocation.scss
@@ -54,6 +54,7 @@ button.sub-btn:hover{
     display:inline-block;
     width:50%;
     margin:10px;
+    border-spacing: 0 10px;
 }
 
 .points-label-container{ 
