--- a/src/quiz/quiz-results/quiz-results.scss
+++ b/src/quiz/quiz-results/quiz-results.scss
@@ -1,8 +1,12 @@
 .quiz-results-container{
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
 }
 .snapshot{
-    border: 2px solid #ff0000;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #509eaa;
+    border-radius: 5px;
 }
 
