--- a/src/points-allocation/point-allocation.scss
+++ b/src/points-allocation/point-allocation.scss
@@ -49,7 +49,10 @@ button.sub-btn:hover{
     margin-right: 10px;
     white-space: nowrap;
 }
-
+button.button{
+    width: 30%;
+    align-self: center;
+}
 .tick-bars-container{
     display:inline-block;
     width:50%;
