--- a/src/points-allocation/point-allocation.scss
+++ b/src/points-allocation/point-allocation.scss
@@ -83,6 +83,8 @@ button.button{
     font-size: 22px;
 }
 .resultsContainer{
+    
     display: flex;
+    justify-content: space-evenly;
     flex-direction: row;
 }
