--- a/src/points-allocation/point-allocation.scss
+++ b/src/points-allocation/point-allocation.scss
@@ -82,6 +82,9 @@ button.button{
     
     font-size: 22px;
 }
+.polar-chart-container{
+    width:50%;
+}
 .resultsContainer{
     
     display: flex;
