--- a/src/quiz/quiz.scss
+++ b/src/quiz/quiz.scss
@@ -47,3 +47,12 @@ li.invis-label{ //we don't use the default li labels so set them to invis.
     background-color: rgb(137, 176, 235);
     
 }
+.numberedList{
+    display: flex;
+}
+.question-container{
+    margin:10px;
+    padding: 10px;
+    display: table;
+    width: 100%;
+}
