revised quiz format

--- a/src/points-allocation/point-allocation.scss
+++ b/src/points-allocation/point-allocation.scss
@@ -76,7 +76,7 @@ button.button{
     border-radius: 10px;
     margin-right: 20px;
     width:50px;
-    border: 2px solid #509EAA;
+    border: 2px solid #6B9BC0;
     
     padding: 10px;
     
