--- a/src/points-allocation/point-allocation.scss
+++ b/src/points-allocation/point-allocation.scss
@@ -13,7 +13,7 @@ td.tick-bar-block{
     margin-left: 10px;
     display: flex;
     flex-direction: row;
-    border: 2px solid white;
+    border: 2px solid #000000;
     justify-content: space-evenly;
     border-radius: 5px;
 }
@@ -23,7 +23,7 @@ td.tick-bar-block{
     border: none;
     min-width: 50px;
     
-    color:white;
+    color:#000000;
     border-radius: 0px;
 }
 .tick-bar-modifier button:focus{
