--- a/src/quiz/quiz-results/quiz-results.scss
+++ b/src/quiz/quiz-results/quiz-results.scss
@@ -1,13 +1,16 @@
-.quiz-results-container{
+.quiz-results-container {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     background-color: #FFFFFF;
 }
-.snapshot{
+
+.snapshot {
     width: 100%;
     height: 100%;
-    border: 2px solid #509eaa;
-    border-radius: 5px;
+    padding-left: 1%;
+    padding-right: 1%;
+    // border: 2px solid #6B9BC0;
+    // border-radius: 5px;
 }
 
