--- a/src/quiz/quiz-results/quiz-results.scss
+++ b/src/quiz/quiz-results/quiz-results.scss
@@ -1,15 +1,14 @@
 .quiz-results-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: #FFFFFF;
 }
 
 .snapshot {
-    width: 100%;
-    height: 100%;
-    padding-left: 1%;
-    padding-right: 1%;
+    width:50%;
+    padding-left: 1px;
+    padding-right: 1px;
     // border: 2px solid #6B9BC0;
     // border-radius: 5px;
 }
