--- a/src/quiz/quiz-results/quiz-results.scss
+++ b/src/quiz/quiz-results/quiz-results.scss
@@ -13,3 +13,11 @@
     // border-radius: 5px;
 }
 
+
+.snapshot-chart {
+    width:100%;
+    padding-left: 1px;
+    padding-right: 1px;
+    // border: 2px solid #6B9BC0;
+    // border-radius: 5px;
+}
