--- a/src/quiz/quiz-results/quiz-results.scss
+++ b/src/quiz/quiz-results/quiz-results.scss
@@ -11,7 +11,7 @@
     padding-left: 2.5%;
     padding-right: 2.5%;
     padding-bottom: 2.5%;
-    // width:50%;
+    width:50%;
     // border: 2px solid #6B9BC0;
     // border-radius: 5px;
 }
