made responsive layout

--- a/src/quiz/quiz-results/quiz-results.scss
+++ b/src/quiz/quiz-results/quiz-results.scss
@@ -15,3 +15,21 @@
     // border: 2px solid #6B9BC0;
     // border-radius: 5px;
 }
+@media only screen and (max-width: 800px) {
+    .quiz-results-container {
+        display: block;
+        justify-content: space-between;
+        background-color: #FFFFFF;
+        margin-right: 1%;
+        margin-left: 1%;
+        width: 100%;
+    }
+    .snapshot {
+        padding-left: 2px;
+        padding-right: 2px;
+        padding-bottom: 2px;
+        width:100%;
+        // border: 2px solid #6B9BC0;
+        // border-radius: 5px;
+    }
+  }
