made quiz responsive to mobile

--- a/src/quiz/quiz-results/quiz-results.scss
+++ b/src/quiz/quiz-results/quiz-results.scss
@@ -32,4 +32,10 @@
         // border: 2px solid #6B9BC0;
         // border-radius: 5px;
     }
+    .typology-flex{
+        max-width: 100%;
+        width: 95%;
+        display: contents;
+        padding:10px;
+    }
   }
