--- a/src/quiz/quiz-results/typologies/typology.scss
+++ b/src/quiz/quiz-results/typologies/typology.scss
@@ -5,6 +5,20 @@
     max-width: 100%;
     max-height: 100%;
 }
+.typology-render{
+    max-height:50vh; 
+    overflow:auto;
+}
+@media only screen and (max-width: 800px) {
+    .typology-container{
+        display: flex;
+        flex-direction: column;
+    }
+    .typology-render{
+        max-height:100%; 
+        overflow:auto;
+    }
+  }
 img{
     max-width: 100%;
     max-height: 100%;
