added padding to type render

--- a/src/quiz/quiz-results/typologies/typology.scss
+++ b/src/quiz/quiz-results/typologies/typology.scss
@@ -8,6 +8,7 @@
 .typology-render{
     max-height:50vh; 
     overflow:auto;
+    padding:10px;
 }
 @media only screen and (max-width: 800px) {
     .typology-container{
