--- a/src/quiz/quiz-results/quiz-results.scss
+++ b/src/quiz/quiz-results/quiz-results.scss
@@ -15,6 +15,10 @@
     // border: 2px solid #6B9BC0;
     // border-radius: 5px;
 }
+.quiz-results-all-container{
+    display: flex;
+    flex-direction: column;
+}
 @media only screen and (max-width: 800px) {
     .quiz-results-container {
         display: block;
